--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -27,6 +27,10 @@
   "type" : "RIGHTNAV",
   "params" : [ ]
 }, {
+  "name" : "test332",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "topnav",
   "type" : "TOPNAV",
   "params" : [ ]
