tets982032 New files added - [test333] Files modified - [Main,data,app.variables.json,pages-config.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -70,6 +70,17 @@
     "operation" : "gotoPage",
     "pageName" : "Main"
   },
+  "goToPage_test333" : {
+    "_id" : "wm-goToPage_test333-wm.NavigationVariable-1520947658196",
+    "name" : "goToPage_test333",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "test333",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_test332" : {
     "_id" : "wm-goToPage_test332-wm.NavigationVariable-1520947680204",
     "name" : "goToPage_test332",
